<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualDialActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolbarTheme"
        android:title="@string/app_name"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions_manual"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/phoneNumberInput"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textSize="72sp"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/makeCallButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructionTextView" />

    <Button
        android:id="@+id/makeCallButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_call"
        android:onClick="makeCall"
        android:textSize="24sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:drawableLeft="@drawable/ic_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberInput"/>

</androidx.constraintlayout.widget.ConstraintLayout>